--- a/style2.css
+++ b/style2.css
@@ -679,7 +679,7 @@ h1, h2, h3, h4, h5, h6 {
         line-height: 24px;
         letter-spacing: 0.473905px;
 
-color: #6D7278;
+        color: #6D7278;
     }
     .intro__info{
         font-size: 16px;
@@ -840,5 +840,42 @@ color: #6D7278;
         display: none;
     }
 
+     /* mobil__intro */
+
+     .intro__info{
+        text-align: left;
+        margin-bottom: 0;
+    }
+    .intro__info a{
+        font-size: 16px;
+        line-height: 19px;
+        letter-spacing: -0.026095px;
+        text-decoration: none;
+        color: #1A8FE8;
+    }
+
+    .intro__item.second {
+        display: block; 
+        margin-top: 0;
+        width: 60%;
+    }
+
+    .intro__img {
+        margin: 14px 38px 34px 18px;
+        padding-top: 0;
+    } 
+
+    .intro__rew{
+        text-align: left;
+        margin: 0 0 15px 18px;
+    }
+    .intro__title{
+        margin: 21px 0 8px;
+        text-align: left;
+    }
+
+    .intro__column.second__column{
+        padding: 40px 0 15px;
+    }
 
 }
