--- a/style2.css
+++ b/style2.css
@@ -193,6 +193,10 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+.intro__inner.intro__mobil{
+    display: none;
+}
+
 
 
 .intro__title{ 
@@ -657,6 +661,8 @@ h1, h2, h3, h4, h5, h6 {
         display: none;
     }
 
+    
+
     .intro__title{
         font-size: 22px;
         line-height: 26px;
@@ -841,6 +847,14 @@ h1, h2, h3, h4, h5, h6 {
     }
 
      /* mobil__intro */
+
+     .intro__inner{
+        display: none;
+    }
+    .intro__inner.intro__mobil{
+        display: flex;
+    }
+
 
      .intro__info{
         text-align: left;
