--- a/style1.css
+++ b/style1.css
@@ -622,7 +622,10 @@ h1, h2, h3, h4, h5, h6 {
     .section__colors {
         padding: 12px 8px;
     }
-
+    .section__item {
+        background: #FAFAFA;
+        border-radius: 16px;
+    }
     .section__item.left__item {
         padding: 18px 10px;
     }
@@ -631,7 +634,7 @@ h1, h2, h3, h4, h5, h6 {
         display: flex;
         flex-wrap: wrap;
         background: #FAFAFA;
-        border-radius: 16px;
+       
     }
 
     .section__item{
@@ -729,5 +732,34 @@ h1, h2, h3, h4, h5, h6 {
 
     .intro__button.second{
         margin-top: 12px;
+    }
+}
+
+@media (max-width: 320px) {
+    .teams__info {
+        padding: 11px;
+    }
+    .teams__contatc {
+        font-size: 12px;
+    }
+    .teams__prof {
+        font-size: 14px;
+    }
+    .team__item img {
+        width: 90px!important;
+        height: auto!important;
+    }
+    .intro__img {
+        max-width: 100px;
+    }
+    .intro__info {
+        margin-top: 9px;
+        font-size: 13px;
+    }
+    .header__text {
+        display: flex;
+    }
+    .header__link {
+        margin: 0 10px;
     }
 }
